--- a/style.css
+++ b/style.css
@@ -41,6 +41,13 @@ body {
   margin-left: 0.5em;
 }
 
+.section-heading {
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 2.8em;
+  font-weight: 600;
+}
+
 /* ************** header section css ************** */
 
 header {
@@ -146,7 +153,80 @@ header h2 {
   justify-content: space-around;
 }
 
-.sponsor-section img{
-    width: 8.5em;
-    height: 4.5em;
+.sponsor-section img {
+  width: 8.5em;
+  height: 4.5em;
+}
+
+/* ************** product collection section css ************** */
+
+.product-collection {
+  padding: 5em 12em 2.5em;
+}
+
+.collection-container {
+  margin-top: 5em;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(28em, 28em));
+  align-items: center;
+  gap: 2em;
+}
+
+.single-product {
+  background-color: #fff;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  padding: 1.5em;
+  border-radius: 1em;
+  cursor: pointer;
+}
+
+.single-product img {
+  width: 25em;
+  height: 25em;
+}
+
+.product-info h4 {
+  font-size: 2.2em;
+  font-weight: 500;
+  text-transform: capitalize;
+  color: #18191f;
+  margin-top: 0.3em;
+  margin-bottom: 0.5em;
+}
+
+.amount {
+  font-family: var(--ff-inter);
+  font-size: 2em;
+  color: rgba(0, 0, 0, 0.893);
+  font-weight: 600;
+  color: #e02c6d;
+}
+
+.rating {
+  margin-top: 1em;
+}
+
+.rating i {
+  color: #fbb200;
+}
+
+.rating span {
+  margin-left: 0.5em;
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+.see-more {
+  position: absolute;
+  right: 0;
+  margin-right: 11em;
+  margin-top: 1.5em;
+  font-size: 1.8em;
+  color: #e02c6d;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.see-more i {
+  margin-left: 0.5em;
 }
