--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ header {
   padding: 4em 12em;
 }
 
+header .bars {
+  display: none;
+}
+
 header h2 {
   font-size: 2.4em;
   font-weight: 700;
@@ -171,6 +175,7 @@ header h2 {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(28em, 28em));
   align-items: center;
+  justify-content: space-evenly;
   gap: 2em;
 }
 
@@ -218,12 +223,12 @@ header h2 {
   font-weight: 500;
 }
 
-.product-info p{
-    font-size: 1.2em;
-    font-family: var(--ff-inter);
-    font-weight: 700;
-    color: #787885;
-    margin-top: .5em;
+.product-info p {
+  font-size: 1.2em;
+  font-family: var(--ff-inter);
+  font-weight: 700;
+  color: #787885;
+  margin-top: 0.5em;
 }
 
 .see-more {
@@ -243,65 +248,423 @@ header h2 {
 
 /* ************** featured product section css ************** */
 
-.featured-product{
-    padding: 12em 12em 5em;
-    display: flex;
-    align-items: center;
-    gap: 10em;
+.featured-product {
+  padding: 12em 12em 5em;
+  display: flex;
+  align-items: center;
+  gap: 5em;
 }
 
-.featured-product img{
-    width: 40em;
-    height: 27em;
-    border-radius: .7em;
+.featured-product img {
+  width: 48%;
+  object-fit: cover;
+  height: 27em;
+  border-radius: 0.7em;
 }
 
-.featured-right-div h3{
-    font-size: 3.8em;
-    color: #0a0826;
-    font-weight: 700;
+.featured-right-div {
+  width: 48%;
 }
 
-.featured-right-div p{
-    width: 30em;
-    font-weight: 600;
-    font-size: 1.6em;
-    color: #6c6c6c;
-    margin: 1em 0;
+.featured-right-div h3 {
+  font-size: 3.8em;
+  color: #0a0826;
+  font-weight: 700;
+}
+
+.featured-right-div p {
+  width: 100%;
+  font-weight: 600;
+  font-size: 1.6em;
+  color: #6c6c6c;
+  margin: 1em 0;
 }
 
 /* ************** footer section css ************** */
 
-footer{
-    max-width: 1440px;
-    margin: 0 auto;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-background-color: #0a0826;
-color: #fff;
-padding: 5em 0;
+footer {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #0a0826;
+  color: #fff;
+  padding: 5em 0;
 }
 
-footer h2{
-    font-size: 2.4em;
-    font-weight: 700;
-
+footer h2 {
+  font-size: 2.4em;
+  font-weight: 700;
 }
 
-footer p{
-    font-family: var(--ff-manrope);
-    font-weight: 700;
-    color: #85e8ec;
-    font-size: 1.3em;
+footer p {
+  font-family: var(--ff-manrope);
+  font-weight: 700;
+  color: #85e8ec;
+  font-size: 1.3em;
+  text-align: center;
+  margin: 0.5em 0;
+}
+
+footer div a i {
+  font-size: 2.2em;
+  margin-right: 0.8em;
+  color: #fff;
+  margin-top: 0.5em;
+}
+
+/* ************** Mobile responsive section css ************** */
+
+@media screen and (max-width: 576px) {
+  .section-width {
+    width: 100%;
+  }
+  header {
+    width: 100%;
+    padding: 2em;
+    background-color: cornsilk;
+  }
+
+  header .bars {
+    display: block;
+    font-size: 1.8em;
+  }
+
+  header h2 {
+    font-size: 1.6em;
+  }
+
+  .header-nav ul {
+    display: none;
+  }
+
+  .header-nav img:nth-of-type(1) {
+    display: none;
+  }
+
+  .header-nav img:nth-of-type(2) {
+    margin-right: 1em;
+    width: 2em;
+    height: 2em;
+  }
+
+  .header-banner {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 3em;
+  }
+
+  .banner-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .banner-text h1 {
+    font-size: 2.8em;
     text-align: center;
-    margin: .5em 0;
+    margin-top: 0.5em;
+  }
+
+  .banner-text p {
+    font-size: 1.4em;
+    text-align: center;
+    padding-right: 0;
+  }
+
+  .header-banner img:nth-of-type(1) {
+    width: 25.7em;
+    height: 25.7em;
+  }
+
+  .header-banner img:nth-of-type(2) {
+    width: 20.2em;
+    height: 19em;
+    margin-left: 2.5em;
+  }
+
+  .sponsor-o-u {
+    display: none;
+  }
+
+  .sponsor-section {
+    padding: 3em;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 1em;
+  }
+
+  .sponsor-section img {
+    width: 5.5em;
+    height: 2em;
+  }
+
+  .product-collection {
+    padding: 2em;
+  }
+
+  .featured-product {
+    padding: 3em;
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 2em;
+  }
+
+  .featured-right-div {
+    margin-top: 5em;
+    width: 100%;
+  }
+
+  .featured-right-div h3 {
+    font-size: 2.4em;
+    text-align: center;
+  }
+
+  .featured-product img {
+    width: 100%;
+    height: 25em;
+    object-fit: cover;
+  }
+
+  .featured-right-div p {
+    width: 100%;
+    text-align: center;
+  }
+
+  footer {
+    width: 100%;
+  }
+
+  footer h2 {
+    font-size: 1.6em;
+  }
+
+  footer p {
+    font-size: 1.2em;
+  }
+
+  footer div a i {
+    font-size: 1.8em;
+    margin-right: 0.8em;
+    color: #fff;
+    margin-top: 0.5em;
+  }
 }
 
-footer div a i{
+@media screen and (max-width: 479px) {
+  .collection-container {
+    grid-template-columns: repeat(1, 90%);
+    align-items: center;
+    justify-content: center;
+  }
+
+  .single-product img {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 576px) {
+  .collection-container {
+    grid-template-columns: repeat(2, 50%);
+    align-items: center;
+    justify-content: center;
+  }
+  .single-product img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0.5em;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  .section-width {
+    width: 100%;
+  }
+
+  header {
+    padding: 2em;
+    background-color: aliceblue;
+  }
+
+  header h2 {
+    font-size: 1.8em;
+  }
+
+  .header-nav li a {
+    font-size: 1.4em;
+    margin-right: 1.4em;
+  }
+
+  .header-nav img:nth-of-type(1) {
+    width: 2em;
+    height: 2em;
+    margin-right: 2em;
+  }
+
+  .header-nav img:nth-of-type(2) {
+    width: 2.5em;
+    height: 2.5em;
+  }
+
+  .header-banner {
+    padding: 3em;
+  }
+
+  .banner-img img:nth-of-type(1) {
+    width: 32em;
+    height: 32em;
+  }
+
+  .banner-img img:nth-of-type(2) {
+    width: 26em;
+    height: 26em;
+    margin-left: 2em;
+  }
+
+  .banner-text h1 {
+    font-size: 3.5em;
+  }
+
+  .banner-text p {
+    padding-right: 2em;
+    font-size: 1.4em;
+  }
+
+  .banner-text button {
+    padding: 0.8em 1.2em;
+  }
+
+  .sponsor-section {
+    padding: 2em;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 2em;
+  }
+
+  .sponsor-section img {
+    width: 6em;
+    height: 3em;
+  }
+
+  .product-collection {
+    padding: 2em;
+  }
+
+  .product-info h4 {
+    font-size: 1.8em;
+  }
+
+  .amount {
+    font-size: 1.6em;
+  }
+
+  .featured-product {
+    padding: 3em;
+    flex-direction: column;
+    gap: 2em;
+    margin-top: 5em;
+  }
+
+  .featured-product img {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .featured-right-div {
+    width: 100%;
+  }
+
+  .featured-right-div h3 {
+    font-size: 3em;
+    text-align: center;
+  }
+
+  .featured-right-div p {
+    width: 100%;
+    text-align: center;
+  }
+
+  .featured-right-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .collection-container {
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+  }
+  .single-product img {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0.5em;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  header {
+    padding: 4em;
+  }
+
+  header h2 {
     font-size: 2.2em;
-    margin-right: .8em;
-    color: #fff;
-    margin-top: .5em;
+  }
+
+  .header-banner {
+    padding: 4em;
+  }
+
+  .banner-text h1 {
+    font-size: 4.8em;
+  }
+
+  .banner-text p {
+    font-size: 1.4em;
+    padding-right: 2em;
+  }
+
+  .banner-img img:nth-of-type(1) {
+    width: 42em;
+    height: 42em;
+  }
+
+  .banner-img img:nth-of-type(2) {
+    width: 38em;
+    height: 38em;
+  }
+
+  .sponsor-section {
+    padding: 2em 4em;
+  }
+
+  .product-collection {
+    padding: 10em 4em;
+  }
+
+  .collection-container {
+    justify-content: space-evenly;
+  }
+
+  .featured-product {
+    flex-direction: column-reverse;
+    padding: 4em;
+    gap: 3em;
+  }
+
+  .featured-right-div {
+    width: 100%;
+  }
+
+  .featured-right-div p {
+    width: 100%;
+  }
+
+  .featured-product img {
+    width: 100%;
+    object-fit: cover;
+  }
 }
